--- a/index.html
+++ b/index.html
@@ -1,65 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="tarjeta.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="boton.css">
 </head>
+
 <body>
-    <div class="card card--shadow card--rounded card--hover">
-        <h2 class="card__title">viktor</h2>
-        <p class="card__content">La paciencia es amarga, pero su fruto es dulce</p>
-      <input class="input input--error input--large input--icono" type="text">
-      <ul class="list list--unstyled list--inline list--hover">
-        <li class="listaitem">Elemento 1</li>
-        <li class="listaitem">Elemento 2</li>
-        <li class="listaitem">Elemento 3</li>
-      </ul>
-      <button class="btn btn--primary btn--large btn--disabled">Botón</button>
-    </div>
-    <br>
+<div class="pajaro">
+  <a href="viktor.html" class="btn btn--primary btn--large btn--disabled btn--uno">viktor</a>
+  <a href="chow.html" class="jpg jpg--primary jpg--large jpg--disabled jpg--uno">CHOW</a>
+  <a href="motomoto.html" class="mvp mvp--primary mvp--large mvp--disabled mvp--uno">Motomo</a>
+  <a href="kenny.html" class="np np--primary np--large np--disabled np--uno">KENNY</a>
+</div>
 
-  <div class="CHOW card--shan card--round card--hoverr">
-      <h2 class="card__title">CHOW</h2>
-      <p class="card__content">No lo se, tu dime</p>
-    <input class="infin input--pum input--larga input--iconu" type="text">
-    <ul class="list list--unstyled list--inline list--hover">
-      <li class="listaitem">Elemento 1</li>
-      <li class="listaitem">Elemento 2</li>
-      <li class="listaitem">Elemento 3</li>
-    </ul>
-    <button class="jpg jpg--primary jpg--large jpg--disabled">Botón</button>
-  </div>
-  <br>
-  
-
- <div class="mvp mvp--shadow mvp--rounded mvp--hover">
-    <h2 class="card__title">motomoto</h2>
-    <p class="card__content">“El pasado puede doler, pero tal como yo lo veo, puedes huir de él o aprender”</p>
-   <input class="motomoto input--fi input--corto input--gif" type="text">
-   <ul class="list list--unstyled list--inline list--hover">
-      <li class="listaitem">Elemento 1</li>
-      <li class="listaitem">Elemento 2</li>
-      <li class="listaitem">Elemento 3</li>
-   </ul>
-   <button class="mvp mvp--primary mvp--large mvp--disabled">Botón</button>
- </div>
- <br>
-
-
- <div class="np np--shadow np--rounded np--hover">
-    <h2 class="card__title">KENNY</h2>
-    <p class="card__content">no puedo morir</p>
-   <input class="one input--bien input--RH input--IMG" type="text">
-   <ul class="list list--unstyled list--inline list--hover">
-      <li class="listaitem">Elemento 1</li>
-      <li class="listaitem">Elemento 2</li>
-      <li class="listaitem">Elemento 3</li>
-   </ul>
-   <button class="np np--primary np--large np--disabled">Botón</button>
- </div>
- <br>
 
 </body>
+
 </html>
